@@ -1,3 +1,7 @@
+2003-10-27  Kentaro Sato <kentaro@ranvis.com>
+
+	* timidity/effect.c: Fixed noise shaping filter bug.
+
 2003-10-26  Saito <saito2@digitalme.com>
 
 	* timidity/mix.c, timidity/tables.[ch], playmidi.[ch]:
